// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CharClass > can be empty 1`] = `
{
  "body": {
    "end": 2,
    "expressions": [],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 3,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharClass > should be quantifiable 1`] = `
{
  "body": {
    "end": 4,
    "expression": {
      "end": 3,
      "expressions": [
        {
          "charCode": 97,
          "end": 2,
          "kind": "Char",
          "start": 2,
          "type": "Simple",
          "value": "a",
        },
      ],
      "kind": "CharClass",
      "negative": false,
      "start": 1,
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 4,
      "greedy": true,
      "kind": "Quantifier",
      "start": 4,
      "type": 1,
    },
    "start": 1,
  },
  "end": 5,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharClass > should be quantifiable 2`] = `
{
  "body": {
    "end": 6,
    "expression": {
      "end": 3,
      "expressions": [
        {
          "charCode": 97,
          "end": 2,
          "kind": "Char",
          "start": 2,
          "type": "Simple",
          "value": "a",
        },
      ],
      "kind": "CharClass",
      "negative": false,
      "start": 1,
    },
    "kind": "Repetition",
    "quantifier": {
      "end": 6,
      "from": 1,
      "greedy": true,
      "kind": "Quantifier",
      "start": 4,
      "to": undefined,
      "type": 3,
    },
    "start": 1,
  },
  "end": 7,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharClass > should correctly parse char range 1`] = `
{
  "body": {
    "end": 5,
    "expressions": [
      {
        "end": 4,
        "from": {
          "charCode": 97,
          "end": 2,
          "kind": "Char",
          "start": 2,
          "type": "Simple",
          "value": "a",
        },
        "kind": "CharRange",
        "start": 2,
        "to": {
          "charCode": 122,
          "end": 4,
          "kind": "Char",
          "start": 4,
          "type": "Simple",
          "value": "z",
        },
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 6,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharClass > should correctly parse if there are two open brackets 1`] = `
{
  "body": {
    "end": 5,
    "expressions": [
      {
        "charCode": 91,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "[",
      },
      {
        "charCode": 97,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": "a",
      },
      {
        "charCode": 98,
        "end": 4,
        "kind": "Char",
        "start": 4,
        "type": "Simple",
        "value": "b",
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 6,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharClass > should correctly parse simple char class 1`] = `
{
  "body": {
    "end": 3,
    "expressions": [
      {
        "charCode": 97,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "a",
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharClass > should correctly parse syntax chars 1`] = `
{
  "body": {
    "end": 19,
    "expressions": [
      {
        "charCode": 92,
        "end": 3,
        "kind": "Char",
        "start": 2,
        "type": "Escaped",
        "value": "\\\\",
      },
      {
        "charCode": 46,
        "end": 4,
        "kind": "Char",
        "start": 4,
        "type": "Simple",
        "value": ".",
      },
      {
        "charCode": 42,
        "end": 5,
        "kind": "Char",
        "start": 5,
        "type": "Simple",
        "value": "*",
      },
      {
        "charCode": 43,
        "end": 6,
        "kind": "Char",
        "start": 6,
        "type": "Simple",
        "value": "+",
      },
      {
        "charCode": 63,
        "end": 7,
        "kind": "Char",
        "start": 7,
        "type": "Simple",
        "value": "?",
      },
      {
        "charCode": 41,
        "end": 8,
        "kind": "Char",
        "start": 8,
        "type": "Simple",
        "value": ")",
      },
      {
        "charCode": 40,
        "end": 9,
        "kind": "Char",
        "start": 9,
        "type": "Simple",
        "value": "(",
      },
      {
        "charCode": 93,
        "end": 11,
        "kind": "Char",
        "start": 10,
        "type": "Escaped",
        "value": "]",
      },
      {
        "charCode": 91,
        "end": 13,
        "kind": "Char",
        "start": 12,
        "type": "Escaped",
        "value": "[",
      },
      {
        "charCode": 125,
        "end": 14,
        "kind": "Char",
        "start": 14,
        "type": "Simple",
        "value": "}",
      },
      {
        "charCode": 123,
        "end": 15,
        "kind": "Char",
        "start": 15,
        "type": "Simple",
        "value": "{",
      },
      {
        "charCode": 124,
        "end": 16,
        "kind": "Char",
        "start": 16,
        "type": "Simple",
        "value": "|",
      },
      {
        "charCode": 36,
        "end": 17,
        "kind": "Char",
        "start": 17,
        "type": "Simple",
        "value": "$",
      },
      {
        "charCode": 94,
        "end": 18,
        "kind": "Char",
        "start": 18,
        "type": "Simple",
        "value": "^",
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 20,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;
